# ZigZagEditor

./: .gitignore  .gitmodules  CMakeLists.txt
debug_host/: CMakeLists.txt
debug_host/src/: main.cpp
ext/glad/include/glad/: glad.h
extension/examplePlugin/: CMakeLists.txt  examplePlugin.cpp
extension/include/: IDataSource.hpp
nativeHost/src/: main.cpp
plugins/examplePlugin/: CMakeLists.txt  examplePlugin.cpp
resources/: LuaBehaviourDefaultScript.lua  OpenSansRegular.hpp  ZigZagResourcesTag.txt
src/: Application.cpp  Application.hpp  Platform.hpp  Project.cpp  Project.hpp  VariantDefinitions.hpp  _src_files.cmake  main.cpp  types.hpp
src/app/: Action.cpp  Action.hpp  AddObjectCommand.cpp  AddObjectCommand.hpp  ApplicationState.hpp  Command.hpp  CommandStack.cpp  CommandStack.hpp  ConnectCommand.cpp  ConnectCommand.hpp  Directories.cpp  Directories.hpp  Monitors.cpp  Monitors.hpp  RemoveObjectCommand.cpp  RemoveObjectCommand.hpp  RenameObjectCommand.cpp  RenameObjectCommand.hpp  WindowActions.hpp  _app_files.cmake
src/app/command/: AddNodeCommand.cpp  AddNodeCommand.hpp  AddObjectCommand.cpp  AddObjectCommand.hpp  Command.hpp  CommandStack.hpp  ConnectCommand.cpp  ConnectCommand.hpp  DisconnectCommand.cpp  DisconnectCommand.hpp  RemoveNodeCommand.cpp  RemoveNodeCommand.hpp  RemoveObjectCommand.cpp  RemoveObjectCommand.hpp  RenameObjectCommand.cpp  RenameObjectCommand.hpp  _command_files.cmake
src/app/style/: ApplicationStyle.cpp  ApplicationStyle.hpp  FontLibrary.cpp  FontLibrary.hpp  HexColor.hpp  StyleEnums.hpp  StyleGroup.cpp  StyleGroup.hpp  StyleRule.cpp  StyleRule.hpp  _style_files.cmake
src/gui/: ApplicationStyle.cpp  ApplicationStyle.hpp  HierarchyWindow.cpp  HierarchyWindow.hpp  HistoryView.cpp  HistoryView.hpp  HistoryWindow.cpp  HistoryWindow.hpp  LuaEditorWindow.cpp  LuaEditorWindow.hpp  MainMenu.cpp  MainMenu.hpp  NodeEditorWindow.cpp  NodeEditorWindow.hpp  ObjectInspector.cpp  ObjectInspector.hpp  RenderOrderWindow.cpp  RenderOrderWindow.hpp  StyleEditorWindow.cpp  StyleEditorWindow.hpp  Viewport.cpp  Viewport.hpp  Widget.hpp  Window.cpp  Window.hpp  _gui_files.cmake
src/gui/popups/: OperatorSelectionPopup.cpp  OperatorSelectionPopup.hpp  _popup_files.cmake
src/gui/widgets/: OperatorListWidget.cpp  OperatorListWidget.hpp  TypeHierarchyWidget.cpp  TypeHierarchyWidget.hpp  _widget_files.cmake  _widgets_files.cmake
src/interop/: ObjectInterop.cpp  ObjectInterop.hpp  ProjectInterop.cpp  ProjectInterop.hpp  _interop_files.cmake
src/network/: Par.hpp
src/object/: GlobalObjectMap.cpp  GlobalObjectMap.hpp  GlobalObjectTypeLibrary.cpp  GlobalObjectTypeLibrary.hpp  Identifier.cpp  Identifier.hpp  Identity.cpp  Identity.hpp  Node.cpp  Node.hpp  NodeCategory.hpp  NodeTemplate.cpp  NodeTemplate.hpp  NodeTemplateGroup.cpp  NodeTemplateGroup.hpp  ObjectType.cpp  ObjectType.hpp  ObjectTypeInterop.cpp  ObjectTypeLibrary.cpp  ObjectTypeLibrary.hpp  ObjectTypeNamespace.cpp  ObjectTypeNamespace.hpp  Template.cpp  Template.hpp  TemplateGroup.cpp  TemplateGroup.hpp  ZObject.cpp  ZObject.hpp  _object_files.cmake
src/util/: Platform.hpp  StringUtils.hpp  _util_files.cmake
